--- a/src/pages/sell.astro
+++ b/src/pages/sell.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/sellLayout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="购物车效果 和 属性描述符">
     <main>
         <div id="goods">
             <div class="menu-wrapper">
@@ -51,24 +51,6 @@ import Layout from '../layouts/sellLayout.astro';
                         <div class="content-right"><div class="pay">$20元起送</div></div>
                     </div>
                     <div class="ball-container"></div>
-                    <div class="shopcat-list" style="display: none;">
-                        <div class="list-header">
-                            <h1 class="title">购物车</h1>
-                            <span class="empty">清空</span>
-                        </div>
-                        <div class="list-content"><ul></ul></div>
-                    </div>
-                </div>
-                <div class="list-mask" style="display: none;"></div>
-            </div>
-            <div id="food" style="display: none;">
-                <div class="food-content">
-                    <div class="image-header"><img alt="" /> <div class="back"><span class="icon-arrow_lift"></span></div></div>
-                    <div class="content"><h1 class="title"></h1> <div class="detail"><span class="sell-count">月售份</span> <span class="rating">好评率%</span></div> <div class="price"><span class="now">$</span><span class="old" style="display: none;">$</span></div> <div class="cartcontrol-wrapper"><div class="cart-control"><div class="cart-decrease" style="display: none;"><span class="inner icon-remove_circle_outline"></span></div> <div class="cart-count" style="display: none;"></div> <div class="cart-add icon-add_circle"></div></div></div> <div class="buy">加入购物车</div></div>
-                    <div class="split"></div>
-                    <div class="info" style="display: none;"><h1 class="title">商品信息</h1> <p class="text"></p></div>
-                    <div class="split"></div>
-                    <div class="rating"><h1 class="title">商品评价</h1> <div class="ratingselect"><div class="rating-type"><span class="block positive active">全部<span class="count">0</span></span> <span class="block positive">推荐<span class="count">0</span></span> <span class="block negative">吐槽<span class="count">0</span></span></div> <div class="switch"><span class="icon-check_circle"></span> <span class="text">只看有内容的评价</span></div></div> <div class="rating-wrapper"><ul style="display: none;"></ul> <div class="no-rating">暂无评价</div></div></div>
                 </div>
             </div>
         </div>
@@ -119,4 +101,3 @@ import Layout from '../layouts/sellLayout.astro';
 
 <script is:inline src="/js/data.js"></script>
 <script is:inline src="/js/sell.js"></script>
-<!-- <script is:inline src="../components/sell.js"></script> -->
