--- a/src/pages/img.astro
+++ b/src/pages/img.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Photo">
     <main>
         <div id="container">
             <div class="grid">
@@ -98,7 +98,7 @@ import Layout from '../layouts/Layout.astro';
     }
 
     .grid-item {
-        height: 0;
+        width: 33%;
         overflow: hidden;
     }
 
@@ -111,6 +111,11 @@ import Layout from '../layouts/Layout.astro';
 
 <script type="module">
     class ImgLoader {
+        get maxAspectRatio() {
+            const result = (this.doms.container.clientWidth / this.rowHeight) * (1 + this.rowHeightTolerance);
+            return result;
+        }
+
         constructor(rHeight, rHeightTolerance) {
             this.doms = {
                 container: document.getElementById('container'),
@@ -124,27 +129,24 @@ import Layout from '../layouts/Layout.astro';
             this.rowHeight = rHeight || 320;
             this.rowHeightTolerance = rHeightTolerance || 0.25;
 
+            // Object.defineProperty(this, 'maxAspectRatio', {
+            //     get: function () {
+            //         const result = (this.doms.container.clientWidth / this.rowHeight) * (1 + this.rowHeightTolerance);
+            //         return result;
+            //     },
+            // });
+
             this.tempArray = [];
             this.sumRatio = 0;
 
             this.ratioArray = [];
             this.rowArray = [];
         }
-        getMaxAspectRatio() {
-            const result = (this.doms.container.clientWidth / this.rowHeight) * (1 + this.rowHeightTolerance);
-            return result;
-        }
         setItem(item, img) {
             const width = img.naturalWidth;
             const height = img.naturalHeight;
             item.dataset.ratio = width / height;
             return item;
-        }
-        setRatio(img) {
-            const width = img.naturalWidth;
-            const height = img.naturalHeight;
-            const ratio = width / height;
-            return ratio;
         }
         setImage(item) {
             return new Promise((resolve) => {
@@ -156,7 +158,6 @@ import Layout from '../layouts/Layout.astro';
                     } else {
                         resolve(item);
                     }
-
                 } else {
                     img.addEventListener('load', () => {
                         var newItem = this.setItem(item, img);
@@ -186,7 +187,7 @@ import Layout from '../layouts/Layout.astro';
             if (row) {
                 this.tempArray.push(row);
             }
-            if (this.sumRatio > this.getMaxAspectRatio()) {
+            if (this.sumRatio > this.maxAspectRatio) {
                 this.ratioArray.push(this.sumRatio);
                 this.rowArray.push(this.tempArray);
                 this.sumRatio = 0;
@@ -194,7 +195,7 @@ import Layout from '../layouts/Layout.astro';
             }
         }
         lastRow() {
-            while (this.sumRatio < this.getMaxAspectRatio()) {
+            while (this.sumRatio < this.maxAspectRatio) {
                 const div = document.createElement('div');
                 div.className = 'grid-item grid-item-empty';
                 div.dataset.ratio = 1.5;
@@ -209,7 +210,7 @@ import Layout from '../layouts/Layout.astro';
             this.rowArray.forEach((rowItems, index) => {
                 const heightArray = [];
                 const adjustedContainerWidth = this.doms.container.clientWidth - (rowItems.length - 1) * this.gapValue;
-                const ratioItem = this.ratioArray[index] > this.getMaxAspectRatio() ? this.ratioArray[index] : this.getMaxAspectRatio();
+                const ratioItem = this.ratioArray[index] > this.maxAspectRatio ? this.ratioArray[index] : this.maxAspectRatio;
                 const widthRatio = adjustedContainerWidth / ratioItem;
 
                 rowItems.forEach((item) => {
@@ -249,7 +250,6 @@ import Layout from '../layouts/Layout.astro';
     }
 
     const imgLoader = new ImgLoader();
-    // const init = imgLoader.load();
 
     document.addEventListener('DOMContentLoaded', function () {
         imgLoader.load();
