--- a/src/pages/sell.astro
+++ b/src/pages/sell.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/sellLayout.astro';
 ---
 
-<Layout title="购物车效果 和 属性描述符">
+<Layout title="购物车效果">
     <main>
         <div id="goods">
             <div class="menu-wrapper">
