--- a/src/pages/img.astro
+++ b/src/pages/img.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Photo">
+<Layout title="V3 Photo Justified Layout">
     <main>
         <div id="container">
             <div class="grid">
