--- a/src/pages/index2.astro
+++ b/src/pages/index2.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Photo Justified Layout">
     <main>
         <div id="container">
             <div class="grid">
