--- a/src/pages/sell.astro
+++ b/src/pages/sell.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/sellLayout.astro';
+import SellLayout from '../layouts/sellLayout.astro';
 ---
 
-<Layout title="购物车效果">
+<SellLayout title="购物车效果">
     <main>
         <div id="goods">
             <div class="menu-wrapper">
@@ -55,7 +55,7 @@ import Layout from '../layouts/sellLayout.astro';
             </div>
         </div>
     </main>
-</Layout>
+</SellLayout>
 
 <style is:global>
     .food-item .cart-decrease,
@@ -99,5 +99,5 @@ import Layout from '../layouts/sellLayout.astro';
     }
 </style>
 
-<script is:inline src="/js/data.js"></script>
-<script is:inline src="/js/sell.js"></script>
+<script is:inline src="./js/data.js"></script>
+<script is:inline src="./js/sell.js"></script>
