--- a/src/pages/sell.astro
+++ b/src/pages/sell.astro
@@ -99,5 +99,5 @@ import SellLayout from '../layouts/sellLayout.astro';
     }
 </style>
 
-<script is:inline src="./js/data.js"></script>
-<script is:inline src="./js/sell.js"></script>
+<script is:inline src="../js/data.js"></script>
+<script is:inline src="../js/sell.js"></script>
