--- a/src/pages/vue.astro
+++ b/src/pages/vue.astro
@@ -101,8 +101,8 @@ import Layout from '../layouts/sellLayout.astro';
     }
 </style>
 
-<script is:inline src="/js/vue-data.js"></script>
-<script is:inline src="/js/vue.js"></script>
+<script is:inline src="../js/vue-data.js"></script>
+<script is:inline src="../js/vue.js"></script>
 <script type="module">
     var vm = new Vue({
         el: '#app',
