--- a/src/pages/vue2.astro
+++ b/src/pages/vue2.astro
@@ -29,7 +29,7 @@ import Layout from '../layouts/sellLayout.astro';
     }
 </style>
 
-<script is:inline src="./js/euv.js"></script>
+<script is:inline src="../js/euv.js"></script>
 <script is:inline>
     var user = {
         name: '张三',
