--- a/src/pages/vue3.astro
+++ b/src/pages/vue3.astro
@@ -29,7 +29,7 @@ import Layout from '../layouts/sellLayout.astro';
     }
 </style>
 
-<script is:inline src="./js/reactive-system.js"></script>
+<script is:inline src="../js/reactive-system.js"></script>
 <script is:inline>
     const user = reactive({
         name: '张三',
