--- a/src/layouts/jgLayout.astro
+++ b/src/layouts/jgLayout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
-        <link rel="stylesheet" href="./css/justifiedGallery.min.css" />
+        <link rel="stylesheet" href="../css/justifiedGallery.min.css" />
     </head>
     <body>
         <slot />
