--- a/src/pages/justified-gallery.astro
+++ b/src/pages/justified-gallery.astro
@@ -105,9 +105,9 @@ import Layout from '../layouts/jgLayout.astro';
     } */
 </style>
 
-<script is:inline src="/js/jquery.min.js"></script>
-<script is:inline src="/js/jquery.justifiedGallery.min.js"></script>
-<script type="module">
+<script is:inline src="../js/jquery.min.js"></script>
+<script is:inline src="../js/jquery.justifiedGallery.min.js"></script>
+<script is:inline>
     // $('.grid').justifiedGallery();
     $('.grid')
         .justifiedGallery({
