--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="音乐播放器">
     <main>
-        <audio controls src="/media/music.mp3"></audio>
+        <audio controls src="../media/music.mp3"></audio>
         <div class="container">
             <ul></ul>
         </div>
@@ -45,7 +45,7 @@ import Layout from '../layouts/Layout.astro';
     }
 </style>
 
-<script is:inline src="/js/lrc.js"></script>
+<script is:inline src="../js/lrc.js"></script>
 <script type="module">
     // console.log(lrc);
     /**
