--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,8 +15,8 @@ const { title } = Astro.props;
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
-        <!-- <script src="/js/row.js" is:inline></script> -->
-        <!-- <script src="/js/justified.js" is:inline></script> -->
+        <!-- <script src="../js/row.js" is:inline></script> -->
+        <!-- <script src="../js/justified.js" is:inline></script> -->
     </head>
     <body>
         <slot />
